force-app/main/default/objects/Opportunity/fields/Approx_of_Loans__c.field-meta.xml
<CustomField>
    <fullName>Approx_of_Loans__c</fullName>
    <label>Approx. # of Loans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>