force-app/main/default/objects/Opportunity/fields/CECL_Data_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>CECL_Data_Run_Date__c</fullName>
    <description>When DebtX ran prospects data for DXCDA</description>
    <label>CECL Data Run Date</label>
    <type>Date</type>
</CustomField>