force-app/main/default/objects/Opportunity/fields/CECL_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>CECL_Implementation_Date__c</fullName>
    <description>For Public companies, SEC = 2020
For other public and all private companies(e.g. Mutual, Private) = 2021</description>
    <label>CECL Implementation Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>