force-app/main/default/objects/Opportunity/fields/CECL_Solution__c.field-meta.xml
<CustomField>
    <fullName>CECL_Solution__c</fullName>
    <description>Prospect Choice of CECL Solutions</description>
    <label>CECL Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>