force-app/main/default/objects/Opportunity/fields/Estimated_Maximum_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Maximum_Fee__c</fullName>
    <label>Estimated Maximum Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>