force-app/main/default/objects/Opportunity/fields/FDIC_Cert__c.field-meta.xml
<CustomField>
    <fullName>FDIC_Cert__c</fullName>
    <formula>Account.FDIC_Cert_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FDIC Cert</label>
    <type>Text</type>
</CustomField>