force-app/main/default/objects/Opportunity/fields/Modern_Funding__c.field-meta.xml
<CustomField>
    <fullName>Modern_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this is a MF Opportunity</description>
    <inlineHelpText>Check if this is a MF Opportunity</inlineHelpText>
    <label>Modern Funding?</label>
    <type>Checkbox</type>
</CustomField>