force-app/main/default/objects/Opportunity/fields/Old_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Salesforce_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old Salesforce ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>