force-app/main/default/objects/Opportunity/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identified Assets</fullName>
            </value>
            <value>
                <fullName>Discussed Reserve Price</fullName>
            </value>
            <value>
                <fullName>Sent Engagement Agreement</fullName>
            </value>
            <value>
                <fullName>Signed Engagement Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>