force-app/main/default/objects/Opportunity/fields/X2023_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>X2023_Deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates this opportunity came from the DebtX SFDC Clone in February 2023 and does not have bearing on this new SFDC org. The purpose of these fields are purely informational.</description>
    <inlineHelpText>This field indicates this opportunity came from the DebtX SFDC Clone in February 2023 and does not have bearing on this new SFDC org. The purpose of these fields are purely informational.</inlineHelpText>
    <label>2023 Deprecated</label>
    <type>Checkbox</type>
</CustomField>